--- a/src/app/public/sass/_drawer.scss
+++ b/src/app/public/sass/_drawer.scss
@@ -143,13 +143,15 @@
   }
 
   &__post {
-    margin: 20px 30px;
-
+    margin: 20px 30px 0;
     @include zurui-box(0.3);
   }
 
   &__contents--infinitescroll-message {
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__contents--box-loading-init {
